--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(&quot;http://oy3jbyryn.bkt.clouddn.com/profilePhoto.jpg&quot;);"></div>
+                <div class="portrait" style="background-image: url(../resume/images/model.jpg);"></div>
                 
                 <h1 id="username" contenteditable="true">董颖英</h1>
                 <h4 id="persona-tag" contenteditable="true">Javascript/ Web / 前端</h4>
@@ -65,7 +65,7 @@
                         <progress value="54.6875" max="100"></progress>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">Go</label>
+                        <label class="left-label" contenteditable="true"></label>
                         <progress value="46.875" max="100"></progress>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
@@ -98,12 +98,12 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">2017.4-2018.6 北京北大英华科技有限公司－软件工程师</h3>
-                        <p contenteditable="true">主要使用Java和Python，进行法律数据分析，构建知识图谱，建立法律全文检索库和数据处理的可视化平台搭建</p>
+                        <h3 contenteditable="true">时间1</h3>
+                        <p contenteditable="true">描述</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <h3 contenteditable="true">2013.11-2017.4&nbsp;小米科技有限责任公司 -&nbsp;软件工程师</h3>
-                        <p contenteditable="true">主要做内部订单处理系统和客服支持相关系统，使用Java和.net技术对接阿里提供的Top接口，开发内部订单处理系统和工单系统。</p>
+                        <h3 contenteditable="true">时间</h3>
+                        <p contenteditable="true">描述</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
@@ -112,7 +112,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">&nbsp;流式法律数据实时处理平台</h3>
+                        <h3 contenteditable="true">&nbsp;项目</h3>
                         <p contenteditable="true">
                             1.使用Java的SpringCloud技术栈</p><div>2.数据源使用Java的WebMagic采集框架从法律相关网站采集</div><div>3.采集的推送到Kafka供各分析系统提取使用</div><div>4.处理后的数据存储在MongoDB作为备份，存储在ElasticSearch用作全文检索，存储在Hbase用作知识图谱等人工智能产品分析使用<span style="display: inline !important;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span></div><p contenteditable="true"></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
@@ -137,7 +137,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">掌握的语言</h3>
-                        <p contenteditable="true">Java、<span style="display: inline !important;">Python、</span><span style="display: inline !important;">C#、</span><span style="display: inline !important;">Go</span></p>
+                        <p contenteditable="true">Javascript<span style="display: inline !important;">html</span><span style="display: inline !important;">css</span><span style="display: inline !important;"></span></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li> 
                     <li>
                         <h3 contenteditable="true">web框架</h3>
@@ -158,7 +158,7 @@
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title" contenteditable="true">自我评价</span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
-                <p contenteditable="true">&nbsp; &nbsp; &nbsp; 我是一个爱生活爱技术的男生，对编程有一种天生的好感，喜欢钻研新技术，爱折腾。自身掌握了多门语言：<span style="display: inline !important;">Java、</span><span style="display: inline !important;">Python、</span><span style="display: inline !important;">C#、</span><span style="display: inline !important;">Go，目标是要做全栈工程师。</span></p><div><span style="display: inline !important;">&nbsp; &nbsp; &nbsp; 但我并不是一个技术宅，工作之余我喜欢户外徒步和爬山，在北京工作的时候，爬遍了周边几乎能叫的出名字的高山，同时也热衷于越野跑赛事，我在小米和北大英华公司都组织了多次团队户外登山和露营活动，受到了同事们的一致好评。</span></div><p contenteditable="true"></p>
+                <p contenteditable="true">&nbsp; &nbsp; &nbsp; 我是一个爱生活爱技术的男生，喜欢编程，喜欢钻研新技术，爱折腾。自身掌握了一定的前端基础：<span style="display: inline !important;">Javascript、</span><span style="display: inline !important;">html、</span><span style="display: inline !important;">css、</span><span style="display: inline !important;">目标是要做前端开发。</span></p><div><span style="display: inline !important;">&nbsp; &nbsp; &nbsp; 但我并不是一个技术宅，学习之余我喜欢户外徒步和爬山，在深圳学习的时候，爬遍了周边几乎能叫的出名字的高山。</span></div><p contenteditable="true"></p>
             </div>
         </div>
     </div>
