--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <title>董颖英的简历</title>
     <link rel="stylesheet" href="static/css/style.css">
+    <link href="../resume/images/favicon.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
