--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>董颖英的简历</title>
+    <title>董颖英的个人简历</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../tmall/styles/basic.css">
@@ -16,26 +16,22 @@
     <script src="../tmall/scripts/showAction.js"></script> -->
     <style>
         body{
+            /* background-color: rgb(252, 253, 253);
+            font-family: sans-serif, Microsoft Yahei, Helvetica Neue;
+            zoom: 80%;
+            margin: 0;
+             */
              padding-top: 55px;
         }
-        .panel-default {
-            border-radius: 15px !important;
-            background-color:azure !important;
-            border-top: 0 !important;
+        .panel-body {
+            border-radius: 50px !important;
 
         }
-        /* .panel-heading{
-            border-top-left-radius: 15px !important;
-            border-top-right-radius: 15px !important;
-        } */
         .redColor{
         color: #C40000 !important;
         }
         .panel{
             margin-top: 0px;
-        }
-        .jumbotron{
-            border-radius: 15px !important;
         }
         
     </style>
@@ -103,7 +99,7 @@
                     <address>
                         <strong>广东</strong><br>
                         <span class="glyphicon glyphicon-home" title="Address"></span><kbd> 深圳龙岗区</kbd><br>
-                        <span class="glyphicon glyphicon-calendar" title="PostalCoded"></span> 201201<br>
+                        <span class="glyphicon glyphicon-file" title="PostalCoded"></span> 201201<br>
                         <span class="glyphicon glyphicon-phone" title="Mobile"></span> 13418513207<br>
                         <span class="glyphicon glyphicon-heart redColor" title="desire"> </span> 求职意向：前端实习<br>
                         <span class="glyphicon glyphicon-envelope" title="Email"></span><code> 1204578299@qq.com</code>
@@ -124,6 +120,17 @@
                         </div>
                     </div>
 
+                    <!-- <div class="row">
+                        <div class="col-sm-3">
+                            <span class="text-success">IOS</span>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-success active" style="width: 85%"></div>
+                            </div>
+                        </div>
+                    </div> -->
+
                     <div class="row">
                         <div class="col-sm-3">
                             <span class="text-info">javascript</span>
@@ -137,13 +144,13 @@
 
                     <div class="row">
                         <div class="col-sm-3">
-                            <span class="text-warning"></span>
+                            <span class="text-warning">JQuery</span>
                         </div>
-                        <!-- <div class="col-sm-9">
+                        <div class="col-sm-9">
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped progress-bar-warning active" style="width: 65%"></div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
 
                     <div class="row">
@@ -338,7 +345,6 @@
                                       </div>
                                       <div class="panel-body">
                                         <a href="pages/tmall.html">仿天猫商城首页</a>
-                                        <!-- <br><a href="pages/resume.html">可编辑简历模板</a> -->
                                       </div>
                                   </div>
 
@@ -347,8 +353,8 @@
                                         <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> 校内活动
                                       </div>
                                       <div class="panel-body">
-                                        <p>①、通过所在社团组织部参加福利院慰问福利院中的儿童陪伴游戏，画画和敬老院慰问老人等</p>
-                                      <p>②、在校团委组织部任职，管理学院团员资料。</p>
+                                        <p>①、通过所在社团爱心社参加福利院慰问福利院中的儿童陪伴游戏，画画等</p>
+                                      <p>②、在所在社团负责宣传部门，通过海报，视频等方式宣传。</p>
 
                                       </div>
                                   </div>
