--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
         }
         
     </style>
-  
 </head>
 <body class="container">
+    <audio src="../resume/music/王菲 - 不眠飞行.mp3" controls="true" autoplay="autoplay" loop="loop" hidden="false" preload="auto" type="audio/mpeg"></audio>
+    <!-- <audio id="music" controls="controls" style='display:none' autoplay="true" controls="true"> 
+            <source src="../resume/music/王菲 - 不眠飞行.mp3" type="audio/mpeg"> 
+            </audio> -->
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -390,7 +393,7 @@
 
     <footer>
         <nav class="navbar-fixed-bottom text-center navbar-default">
-            All images and contents &copy;袁俊亮
+           <marquee direction=left>你好，欢迎。</marquee>
         </nav>
     </footer>
 </body>
