--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
             <div class="panel panel-default">
                 <div class="panel-heading">Personal Info</div>
                 <div class="panel-body">
-                    <img src="../resume/images/model.jpg" class="img-responsive img-rounded img-thumbnail" alt="Me" onmouseover="this.src='../resume/images/dong.jpg'" onmouseout="this.src='../resume/images/model.jpg'">
+                    <img src="../resume/images/name.jpg" class="img-responsive img-rounded img-thumbnail" alt="Me" onmouseover="this.src='../resume/images/dong.jpg'" onmouseout="this.src='../resume/images/name.jpg'">
                     <!-- <p class="text-center text-primary">董颖英</p> -->
                     <h2 class="text-center text-primary">董颖英</h1>
                 <h4 class="text-center text-primary">Javascript/ Web / 前端</h4>
                     <address>
                         <strong>广东</strong><br>
                         <span class="glyphicon glyphicon-home" title="Address"></span><kbd> 深圳龙岗区</kbd><br>
-                        <span class="glyphicon glyphicon-calendar" title="PostalCoded"></span> 201201<br>
+                        <span class="glyphicon glyphicon-calendar" title="PostalCoded"></span>199501<br>
                         <span class="glyphicon glyphicon-phone" title="Mobile"></span> 13418513207<br>
                         <span class="glyphicon glyphicon-heart redColor" title="desire"> </span> 求职意向：前端实习<br>
                         <span class="glyphicon glyphicon-envelope" title="Email"></span><code> 1204578299@qq.com</code>
@@ -189,7 +189,7 @@
                         </div>
 
                     </form> -->
-                    <img src="../resume/images/dong.jpg" class="img-responsive img-rounded img-thumbnail" alt="Me" onmouseover="this.src='../resume/images/model.jpg'" onmouseout="this.src='../resume/images/dong.jpg'">
+                    <img src="../resume/images/dong.jpg" class="img-responsive img-rounded img-thumbnail" alt="Me" onmouseover="this.src='../resume/images/name.jpg'" onmouseout="this.src='../resume/images/dong.jpg'">
                 </div>
             </div>
 
